// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ToolbarFieldCategory Component should generate select options: toolbarFieldOptions 1`] = `
[
  {
    "isSelected": false,
    "metaData": {
      "metric": "ipsum",
      "query": {
        "category": "cloud",
      },
    },
    "title": "t(curiosity-toolbar.label_category, {"context":"cloud"})",
    "value": "cloud",
  },
  {
    "isSelected": false,
    "metaData": {
      "metric": "dolor",
      "query": {
        "category": "virtual",
      },
    },
    "title": "t(curiosity-toolbar.label_category, {"context":"virtual"})",
    "value": "virtual",
  },
  {
    "isSelected": false,
    "metaData": {
      "metric": "sit",
      "query": {
        "category": "hypervisor",
      },
    },
    "title": "t(curiosity-toolbar.label_category, {"context":"hypervisor"})",
    "value": "hypervisor",
  },
]
`;

exports[`ToolbarFieldCategory Component should handle updating through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "id": "undefined-inverted",
        "type": "SET_GRAPH_LEGEND",
        "value": "sit_hypervisor",
      },
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "filter": "category",
        "type": "SET_QUERY",
        "value": "hypervisor",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldCategory Component should handle updating through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "id": "mock-product-id-inverted",
        "type": "SET_GRAPH_LEGEND",
        "value": "hello_dolor sit_mock-product-id",
      },
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": "mock-product-id",
      },
      {
        "filter": "category",
        "type": "SET_QUERY",
        "value": "dolor sit",
        "viewId": "mock-product-id",
      },
    ],
  ],
  [
    [
      {
        "id": "mock-product-id-inverted",
        "type": "SET_GRAPH_LEGEND",
        "value": "lorem ipsum",
      },
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": "mock-product-id",
      },
      {
        "filter": "category",
        "type": "SET_QUERY",
        "value": "lorem ipsum",
        "viewId": "mock-product-id",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldCategory Component should render a basic component: basic 1`] = `
<Select
  aria-label="t(curiosity-toolbar.placeholder, {"context":"category"})"
  data-test="toolbarFieldCategory"
  isInline={false}
  onSelect={[Function]}
  options={[]}
  placeholder="t(curiosity-toolbar.placeholder, {"context":"category"})"
  position="left"
/>
`;
